--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"redux-persist": "^6.0.0",
 		"tailwindcss": "^3.4.15",
 		"vite": "^6.0.1"
+	},
+	"dependencies": {
+		"firebase": "^11.0.2"
 	}
 }
