--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.15.0",
+		"@headlessui/react": "^2.2.0",
+		"@heroicons/react": "^2.2.0",
 		"@reduxjs/toolkit": "^2.4.0",
 		"@types/react": "^18.3.12",
 		"@types/react-dom": "^18.3.1",
