--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
 		"react-redux": "^9.1.2",
-		"react-router-dom": "^7.0.1",
+		"react-router-dom": "^7.0.2",
+		"redux": "^5.0.1",
 		"redux-persist": "^6.0.0",
 		"tailwindcss": "^3.4.15",
 		"vite": "^6.0.1"
